--- a/src/assets/css/explore.css
+++ b/src/assets/css/explore.css
@@ -24,33 +24,29 @@
     bottom: 3em;
     overflow-y: scroll;
 }
-.searchTab {
+.page-bar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 4em;
-    padding: 1%;
-    border-bottom: 1px solid rgba(0,0,0,.1);
+    height: 3em;
+    margin-bottom: .5%;
+    border-bottom: 1px solid rgba(0,0,0,.05);
     background-color: white;
+    /* box-shadow: 0 0 1px .5px rgba(0,0,0,.1); */
 }
 .dummyBar {
-    width: 19em;
-    height: 100%;
-    outline: none;
-    border: none;
-    border-radius: 22px;
-    padding: 0 4%;
-    background-color: rgba(0,0,0,.05);
-}
-.searchOptBar {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 3em;
-    height: 100%;
-    border: 1px ssolid black;
+    height: 3em;
+    /* border-radius: 50%; */
+    /* background-color: rgba(255,255,255,1); */
+    /* position: fixed; */
+    /* bottom: 10%; */
+    /* right: 5%; */
+    /* z-index: 2; */
 }
 .works {
     display: flex;
@@ -65,14 +61,16 @@
 .gigs-card {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     width: 98%;
-    height: 20em;
-    margin: 1%;
-    border: .8px solid rgba(0,0,0,.1);
+    /* height: 10em; */
+    margin: .5% auto;
+    overflow: hidden;
+    /* border: .8px solid rgba(0,0,0,.1); */
     border-radius: 5px;
-    background-color: rgba(255,255,255,.5);
+    background-color: rgba(255,255,255,1);
+    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
 }
 .gigs-cover {
     display: flex;
@@ -80,37 +78,71 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 40%;
-    border-top: .5px solid rgba(0,0,0,.1);
-    border-radius: 0 0 5px 5px;
+    /* height: 10em; */
+    margin: 1em auto;
     background-color: rgba(255,255,255,.8);
 }
 .gigs-header {
-    font-size: 1.5em;
+    font-size: 1.3em;
+    margin: 1$;
     /* border: 1px solid black; */
 }
 .gigs-txt {
     width: 100%;
+    height: 2em;
+    margin: 1%;
     text-align: center;
     /* border: 1px solid black; */
+}
+.gigs-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 2em;
+    margin: 1%;
+    font-size: 1.2em;
+    font-weight: bold;
+    border-radius: 5px;
+    color: white;
+    background-color: rgba(0,128,128,1);
+    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
 }
 .commDiv {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    padding: 1% 2%;
+    width: 98%;
+    margin: .5% auto;
+    padding: 1%;
+    /* border: .8px solid rgba(0,0,0,.1); */
+    border-radius: 5px;
     background-color: white;
+    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
     position: relative;
+}
+.headTxt {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 98%;
+    height: 1.8em;
+    margin: 1% auto;
+    padding: 0 1%;
+    font-size: 1.2em;
+    /* border: .5px solid rgba(0,0,0,.1); */
+    border-radius: 5px;
+    box-shadow: 0 0 .5px .5px rgba(0,0,0,.1);
 }
 .commGrp {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
+    width: 99%;
+    padding: 1%;
     overflow-x: scroll;
-    /* border: 1px solid pink; */
+    /* border: 1px solid black; */
     position: relative;
 }
 .commGrp::-webkit-scrollbar {
@@ -125,11 +157,12 @@
     max-height: 14em;
     min-width: 16em;
     max-width: 20em;
-    position: relative;
-    border: 1px solid rgba(0, 0, 0, .1);
-    border-radius: 3px;
     margin: 0 0.5%;
     padding: 1%;
+    /* border: 1px solid rgba(0, 0, 0, .1); */
+    border-radius: 3px;
+    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
+    position: relative;
 }
 .commItemCover {
     display: flex;
@@ -138,7 +171,7 @@
     align-items: center;
     width: 100%;
     height: 50%;
-    border: 1px solid rgba(0,0,0,.1);
+    /* border: 1px solid rgba(0,0,0,.1); */
     border-radius: 3px;
     overflow: hidden;
 }
