--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,11 @@
 .appBase {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,128,128,.01);
+    background-color: rgba(0,128,128,.05);
     position: relative;
     text-decoration: none;
     /* webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
