--- a/src/assets/css/explore.css
+++ b/src/assets/css/explore.css
@@ -24,16 +24,19 @@
     bottom: 3em;
     overflow-y: scroll;
 }
-.page-bar {
+.expCover::-webkit-scrollbar {
+    display: none;
+}
+.explore-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 3em;
     margin-bottom: .5%;
+    padding: 1%;
     border-bottom: 1px solid rgba(0,0,0,.05);
     background-color: white;
-    /* box-shadow: 0 0 1px .5px rgba(0,0,0,.1); */
 }
 .dummyBar {
     display: flex;
@@ -66,44 +69,57 @@
     width: 98%;
     /* height: 10em; */
     margin: .5% auto;
-    overflow: hidden;
-    /* border: .8px solid rgba(0,0,0,.1); */
-    border-radius: 5px;
+    /* overflow: hidden; */
+    border: .8px solid rgba(0,0,0,.1);
+    /* border-radius: 5px; */
     background-color: rgba(255,255,255,1);
     box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
+    background-image: url('../media/pix/ring_banner.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: darken;
 }
 .gigs-cover {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 90%;
     /* height: 10em; */
-    margin: 1em auto;
-    background-color: rgba(255,255,255,.8);
+    margin: 2em auto;
+    color: white;
+    background-color: rgba(255,255,255,.1);
 }
 .gigs-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2em;
     font-size: 1.3em;
-    margin: 1$;
+    margin: 1% auto;
     /* border: 1px solid black; */
 }
 .gigs-txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 2em;
-    margin: 1%;
+    margin: 2% auto;
     text-align: center;
     /* border: 1px solid black; */
 }
-.gigs-btn {
+.gigs-links {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 60%;
-    height: 2em;
-    margin: 1%;
-    font-size: 1.2em;
+    height: 2.5em;
+    margin: 2% auto;
+    /* font-size: 1.2em; */
     font-weight: bold;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     color: white;
     background-color: rgba(0,128,128,1);
     box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
@@ -117,7 +133,7 @@
     margin: .5% auto;
     padding: 1%;
     /* border: .8px solid rgba(0,0,0,.1); */
-    border-radius: 5px;
+    /* border-radius: 5px; */
     background-color: white;
     box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
     position: relative;
@@ -129,18 +145,18 @@
     width: 98%;
     height: 1.8em;
     margin: 1% auto;
-    padding: 0 1%;
+    /* padding: 0 1%; */
     font-size: 1.2em;
     /* border: .5px solid rgba(0,0,0,.1); */
     border-radius: 5px;
-    box-shadow: 0 0 .5px .5px rgba(0,0,0,.1);
+    /* box-shadow: 0 0 .5px .5px rgba(0,0,0,.1); */
 }
 .commGrp {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     width: 99%;
-    padding: 1%;
+    padding: 1% 0;
     overflow-x: scroll;
     /* border: 1px solid black; */
     position: relative;
@@ -153,8 +169,8 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    min-height: 3em;
-    max-height: 14em;
+    /* min-height: 3em; */
+    /* max-height: 14em; */
     min-width: 16em;
     max-width: 20em;
     margin: 0 0.5%;
@@ -170,14 +186,19 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 50%;
+    height: 10em;
     /* border: 1px solid rgba(0,0,0,.1); */
     border-radius: 3px;
     overflow: hidden;
 }
 .commItemImg {
-    width: 100%;
     height: 100%;
+}
+.commItemContent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
 }
 .commItemTxt {
     display: flex;
@@ -186,7 +207,11 @@
     align-items: center;
     width: 100%;
     height: 50%;
+    margin: 1em auto;
     background-color: white;
+}
+.commItemTxt>h3 {
+    font-size: 1.2em;
 }
 .searchPage {
     display: flex;
