--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -18,13 +18,28 @@
 }
 .page-bar {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 3.5em;
     position: fixed;
     border-bottom: .5px solid rgba(0,128,128,.1);
     background-color: rgba(255,255,255,1);
+}
+.page-bar-left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* width: ; */
+    height: 100%;
+}
+.page-bar-right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* width: ; */
+    height: 100%;
+    margin: 0 2%;
 }
 .page-bar-txt {
     display: flex;
@@ -35,10 +50,10 @@
     font-weight: bold;
     margin: auto 1%;
 }
-.back-btn {
-    width: 1.5em;
-    height: 1.5em;
-    margin: auto 1%;
+.page-bar-icon {
+    width: 2em;
+    height: 2em;
+    margin: auto 3%;
 }
 .page-banner {
     display: flex;
@@ -48,8 +63,11 @@
     width: 100%;
     /* height: 15em; */
     margin-top: 3.5em;
-    border-bottom: .5px solid rgba(0,128,128,.1);
     background-color: rgba(0,128,128,.5);
+    background-image: url('../media/pix/ring_banner.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     background-blend-mode: darken;
 }
 .page-banner-headers-cover {
@@ -62,15 +80,18 @@
     margin: 3em auto;
     padding: 2% 0;
     /* border: 1px solid black; */
+    color: white;
     /* background-color: rgba(0,0,0,.1); */
 }
 .page-banner-headers-cover> h3 {
-    font-size: 1.4em;
+    font-size: 1.6em;
     margin: 1%;
+    text-shadow: 1px 1px rgba(140,217,140,.6);
 }
 .page-banner-headers-cover>span {
     margin: 1% auto;
     /* font-size: 1.4em; */
+    font-weight: bold;
 }
 .page-banner-option-cover {
     display: flex;
@@ -88,14 +109,55 @@
     padding: 0 1%;
     font-weight: bold;
     /* border-radius: 5px; */
+    /* border: 1px solid rgba(0,128,128,.1); */
     box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
 }
 .page-btn-1 {
     color: white;
-    background-color: rgba(0,128,128,1);
+    background-color: rgba(140,217,140,.4);
+    border: 1px solid rgba(0,102,0,.5);
+}
+.page-btn-1:active {
+    background-color: rgba(140,217,140,.1);
+    /* background-color: rgba(0,128,128,1); */
+    webkit-tap-highlight-color: none;
 }
 .page-btn-2 {
     background-color: white;
     color: rgba(0,128,128,1);
     /* border: 1px solid rgba(0,128,128,1); */
+}
+.page-more {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.page-more-header-sort {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 3em;
+    padding: 0 2%;
+    /* border: 1px solid black; */
+}
+.page-more-header-sort>span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    /* margin: auto 0; */
+    /* border: 1px solid black; */
+}
+.page-more-view {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1%;
+    /* background-color: rgba(0,0,0,.2); */
 }
