--- a/src/assets/css/createpost.css
+++ b/src/assets/css/createpost.css
@@ -25,25 +25,29 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 1% 2%;
+    padding: 1.3% 1%;
     position: fixed;
     bottom: 0;
     z-index: 2.5;
     background-color: white;
     /* border: 1px solid black; */
+    border-radius: 15px 15px 0 0;
 }
 .banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding: 0 2%; */
-    /* border-bottom: 1px solid rgba(0, 128, 128, .2); */
+    padding: 1% 2%;
+    /* border: 1px solid rgba(0, 128, 128, .2); */
+    border-radius: 15px 15px 5px 5px;
+    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
 }
 .user-banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 5em;
+    height: 4em;
+    margin: 1% 0;
     /* border: 1px solid black; */
 }
 .avatar-cover {
@@ -62,7 +66,7 @@
     height: 100%;
 }
 .user-div {}
-.user-div.i, .view-txt {
+.user-div.i {
     color: teal;
 }
 .view-grp {
@@ -72,9 +76,9 @@
     align-items: center;
     height: 4em;
     width: 6em;
+    margin: 1% 0;
     /* background-color: rgba(0, 128, 128, .1); */
-    /* border: 1px solid rgba(0, 128, 128, .2); */
-    border-radius: 2px;
+    border-left: .5px solid rgba(0,0,0,.1);
     position: relative;
 }
 .view-grp:active {
@@ -82,7 +86,7 @@
     background-color: rgba(0, 128, 128, .2);
 }
 .view-txt {
-    /* font-weight: bold; */
+    font-weight: bold;
 }
 .options-hold {
     display: flex;
