--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,128,128,.05);
+    background-color: rgba(255,255,255,1);
     position: relative;
     text-decoration: none;
     /* webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
