--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -2,6 +2,32 @@
     box-sizing: border-box;
     margin: 0;
 }
+.base {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: grey; */
+    height: 100vh;
+    width: 100%;
+}
+.baseCover {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    position: fixed;
+    margin: auto 0;
+    /* padding: 2%; */
+    top: 3em;
+    bottom: 3em;
+    overflow-y: scroll;
+    /* background-color: rgba(50, 50, 120, .6); */
+}
+.baseCover::-webkit-scrollbar {
+    display: none;
+}
 .page-hold {
     display: flex;
     flex-direction: column;
@@ -10,65 +36,28 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    /* background-color: white; */
+    background-color: white;
     position: relative;
 }
 .page-hold::-webkit-scrollbar {
     display: none;
-}
-.page-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 3.5em;
-    position: fixed;
-    border-bottom: .5px solid rgba(0,128,128,.1);
-    background-color: rgba(255,255,255,1);
-}
-.page-bar-left {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    /* width: ; */
-    height: 100%;
-}
-.page-bar-right {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    /* width: ; */
-    height: 100%;
-    margin: 0 2%;
-}
-.page-bar-txt {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 1.5em;
-    font-size: 1.2em;
-    font-weight: bold;
-    margin: auto 1%;
-}
-.page-bar-icon {
-    width: 2em;
-    height: 2em;
-    margin: auto 3%;
 }
 .page-banner {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    /* height: 15em; */
-    margin-top: 3.5em;
+    width: 96%;
+    height: 18em;
+    margin: 2% auto;
+    border-radius: 5px;
     background-color: rgba(0,128,128,.5);
     background-image: url('../media/pix/ring_banner.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-blend-mode: darken;
+    box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
 }
 .page-banner-headers-cover {
     display: flex;
@@ -77,9 +66,9 @@
     align-items: center;
     text-align: center;
     width: 80%;
-    margin: 3em auto;
+    margin: .5em auto;
     padding: 2% 0;
-    /* border: 1px solid black; */
+    /* border: 1px solid white; */
     color: white;
     /* background-color: rgba(0,0,0,.1); */
 }
@@ -104,11 +93,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 80%;
+    min-width: 60%;
     height: 2.5em;
     padding: 0 1%;
     font-weight: bold;
-    /* border-radius: 5px; */
+    border-radius: 5px;
     /* border: 1px solid rgba(0,128,128,.1); */
     box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
 }
@@ -129,8 +118,9 @@
 }
 .page-more {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
 }
@@ -160,4 +150,12 @@
     width: 100%;
     padding: 1%;
     /* background-color: rgba(0,0,0,.2); */
+}
+.back-fill {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.5);
+    position: absolute;
+    /* z-index: 6; */
 }
