--- a/src/assets/css/createpost.css
+++ b/src/assets/css/createpost.css
@@ -2,24 +2,22 @@
     box-sizing: border-box;
     margin: 0;
 }
+@keyframes example {
+  0% {bottom:-100px;}
+  /* 50% {bottom:-50px;} */
+  100% {bottom:0px;}
+}
+
 .container {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     /* align-items: center; */
     width: 100%;
-    /* height: 100vh; */
-    position: relative;
+    height: 100vh;
+    position: absolute;
     bottom: 0;
     z-index: 2;
-}
-.back-fill {
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0,0,0,.5);
-    z-index: 1.5;
 }
 .create-page-hold {
     display: flex;
@@ -30,8 +28,9 @@
     bottom: 0;
     z-index: 2.5;
     background-color: white;
-    /* border: 1px solid black; */
     border-radius: 15px 15px 0 0;
+    animation-name: example;
+    animation-duration: .2s;
 }
 .banner {
     display: flex;
@@ -227,6 +226,9 @@
     bottom: 0;
     background-color: rgba(0, 0, 0, .2);
     /* border: 1px solid black; */
+    animation-name: example;
+    animation-duration: .2s;
+    animation-timing-function: ease-in-out;
 }
 .view-select {
     display: flex;
@@ -236,6 +238,7 @@
     background-color: white;
     height: 10em;
     padding: 0 1%;
+    border-radius: 10px;
 }
 .view-opt {
     display: flex;
@@ -243,7 +246,7 @@
     align-items: center;
     height: 4em;
     width: 100%;
-    border-top: 1px solid rgba(0, 128, 128, .2);
+    /* border-top: 1px solid rgba(0, 128, 128, .2); */
 }
 .view-opt:active {
     background-color: rgba(0, 128, 128, .2);
@@ -252,12 +255,31 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    width: 90%;
+    /* border: 1px solid black; */
 }
 .view-left-inn {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    min-width: 80%;
+    height: 10%;
+    text-align: left;
+    /* border: 1px solid black; */
+}
+.inn-hd {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 0;
+    width: 100%;
     /* border: 1px solid black; */
 }
 .inn-txt {
-    font-size: 0.8em;
+    font-size: 1em;
+    width: 100%;
+    /* font-weight: bold; */
+    /* border: 1px solid black; */
 }
 .lock-icon {}
 .check-icon, .lock-icon {
@@ -265,8 +287,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 1em;
-    height: 1em;
+    min-width: 1.2em;
+    height: 1.2em;
+    margin: auto 2%;
     color: teal;
     /* border: 1px solid black; */
 }
