--- a/src/assets/css/explore.css
+++ b/src/assets/css/explore.css
@@ -51,36 +51,34 @@
     /* right: 5%; */
     /* z-index: 2; */
 }
-.works {
+.gigs-box {
     display: flex;
+    flex-wrap: wrap;
+    columns: 50% 50%;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    height: 2em;
-    padding: 2%;
-    /* border-bottom: 1px solid rgba(0,0,0,.1); */
-    background-color: white;
+    width: 99%;
+    margin: 0 auto;
+    /* border: 1px solid black; */
+    position: relative;
 }
 .gigs-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 98%;
-    /* height: 10em; */
-    margin: .5% auto;
-    /* overflow: hidden; */
-    border: .8px solid rgba(0,0,0,.1);
-    /* border-radius: 5px; */
-    background-color: rgba(0,128,128,.5);
-    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
-    background-image: url('../media/pix/ring_banner.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-blend-mode: darken;
+    width: 49%;
+    margin: .5%;
+    height: 8em;
+    position: relative;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 0 0 1px 1px rgba(0,0,0,.2);
 }
-.gigs-cover {
+gigs-img {
+    height: 100%;
+}
+gigs-cover {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -90,6 +88,8 @@
     margin: 2em auto;
     color: white;
     background-color: rgba(255,255,255,.1);
+    position: absolute;
+    z-index: 2;
 }
 .gigs-header {
     display: flex;
