--- a/src/assets/css/faculty.css
+++ b/src/assets/css/faculty.css
@@ -1,61 +1,37 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: Courier New;
-}
-.profile {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    /* height: 100%; */
-    width: 100%;
-    position: fixed;
-    top: 3em;
-    /* bottom: 3em; */
-    /* background-color: grey; */
-}
-.profile-cover {
+.fac-cover {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    height: 100%;
+    margin-top: 3em;
     /* padding: 1% 2%; */
-    overflow-y: scroll;
-    position: relative;
+    /* overflow-y: scroll; */
+    /* position: relative; */
 }
-.info-card {
+.fac-card {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     width: 100%;
     /* padding: 2%; */
     /* font-size: 15px; */
     background-color: white;
+    /* border: 1px solid black; */
 }
-.card-details {
+.fac-card-details {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     /* height: 4em; */
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: relative;
 }
-/* .pro-cover {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 8em;
-    position: relative;
-    border: 1px solid black;
-    left: 0;
-} */
-.cover-frame {
+.fac-cover-frame {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -65,27 +41,27 @@
     /* border: 1px solid white; */
     overflow: hidden;
 }
-.cover-img {
+.fac-cover-img {
     width: 100%;
     /* height: 100%; */
 }
-.pro-avatar-cover {
+.fac-avatar-cover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 7em;
-    height: 7em;
-    border-radius: 5px;
+    width: 6em;
+    height: 6em;
+    border-radius: 50%;
     border: 2px solid rgba(255,255,255,1);
     color: teal;
     background-color: white;
     overflow: hidden;
     position: absolute;
-    /* left: 3%; */
+    left: 3%;
     bottom: -30%;
     box-shadow: 0 0 1px 1px rgba(0,0,0,.1);
 }
-.pro-avatar {
+.fac-avatar {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -93,126 +69,102 @@
     /* width: 100%; */
     height: 100%;
 }
-.user-titles {
+.fac-titles {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 1% 2%;
+    width: 97%;
+    padding: 1% 1%;
     margin: 4% 3%;
     /* border: 1px solid black; */
 }
-.fullname-cover {
+.fac-name-cover {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    justify-content: flex-start;
     align-items: center;
-    height: 3em;
+    min-height: 3.5em;
     width: 100%;
-    /* border: 1px solid black; */
+    margin: 1% auto;
     font-weight: bold;
+    position: relative;
 }
-.fullname {
+.fac-name {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    width: 100%;
     font-size: 1.4em;
     /* margin: 1% 0; */
     /* border: 1px solid black; */
 }
-.username {
+.fac-name-sub {
+    width: 100%;
     font-size: 1.1em;
     color: rgb(0, 128, 128);
     /* border: 1px solid black; */
 }
-.collection {
+.fac-collection {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    /* width: 100%; */
+    width: 100%;
     /* border: 1px solid black; */
 }
-.cards-actions {
+.fac-cards-actions {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
     /* height: 3em; */
-    /* width: 50%; */
+    width: 100%;
+    margin: 1% auto;
+    overflow-x: scroll;
     /* border: 1px solid black; */
 }
-.act-btn {
+.fac-cards-actions::-webkit-scrollbar {
+    display: none;
+}
+.fac-act-btn {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 3em;
-    width: 3em;
+    min-width: 50%;
+    margin: 1%;
+    font-weight: bold;
     color: teal;
-    /* border-radius: 2px; */
+    overflow: hidden;
+    border-radius: 5px;
     /* border: 1px solid black; */
+    box-shadow: 0 0 1px 1px rgba(0,0,0,.04);
 }
-.act-btn-icon {
+.fac-act-btn-icon {
     /* height: 2.5em; */
     /* width: 5em; */
     /* border: 1px; */
     /* color: white; */
     /* border: 1px solid black; */
 }
-.user-desc {
+.fac-desc {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /* flex-direction: column; */
+    justify-content: flex-start;
     align-items: center;
     /* height: 4em; */
-    width: 80%;
+    width: 100%;
     /* border: 1px solid black; */
     margin: 2% auto;
     padding: 0 1%;
 }
-.user-bio {
+.fac-bio {
     display: flex;
     flex-direction: column;
     text-align: center;
     /* font-size: 12px; */
     overflow: hidden;
     /* border: 1px solid black; */
-}
-.user-over-header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 3em;
-    /* margin: 1% auto; */
-    padding: 0 1%;
-    font-size: 1.2em;
-    /* border-radius: 5px; */
-    border-top: 1px solid rgba(0,0,0,.05);
-    background-color: white;
-}
-.user-tabs-cover {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 3em;
-    margin: 1% auto;
-    /* padding: 0 1%; */
-}
-.user-tabs {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 50%;
-    color: teal;
-    font-size: 1.1em;
-    font-weight: bold;
-    /* border: 1px solid black; */
-}
-.user-tabs:target {
-    border-bottom: 2px solid rgba(0,128,128,1);
 }
