--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -7,7 +7,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: grey; */
     height: 100vh;
     width: 100%;
 }
@@ -19,9 +18,86 @@
     width: 100%;
     position: fixed;
     margin: auto 0;
-    /* padding: 2%; */
     top: 3em;
     bottom: 3em;
     overflow-y: scroll;
-    /* background-color: rgba(50, 50, 120, .6); */
+}
+.homeCover::-webkit-scrollbar {
+    display: none;
+}
+.pop-serve {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 98%;
+    margin: 3% 0;
+}
+.ft-div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 98%;
+    height: 3em;
+}
+.ft-txt {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+    font-size: 1.2em;
+}
+.pop-cover {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    overflow-x: scroll;
+}
+.pop-cover::-webkit-scrollbar {
+    display: none;
+}
+.pop-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 10em;
+    height: 12em;
+    margin: 2% 1.5%;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 0 5px 1px rgba(0,0,0,.2);
+}
+.pop-img {
+    /* width: 100%; */
+    height: 70%;
+}
+.pop-txt {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 30%;
+    padding: 0 4%;
+    font-weight: bold;
+}
+.gigs-cover {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 96%;
+    margin: 3% auto;
+}
+.gigs-roll {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    overflow-x: scroll;
+}
+.gigs-roll::-webkit-scrollbar {
+    display: none;
 }
