--- a/src/assets/css/statusbar.css
+++ b/src/assets/css/statusbar.css
@@ -13,7 +13,7 @@
     /* height: 4em; */
     position: fixed;
     top: 0;
-    padding: 0 2%;
+    /* padding: 0 2%; */
     z-index: 1;
     background-color: white;
     box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, .05);
