--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+@font-face {
+    font-family: FredokaReg;
+    src: url('assets/fonts/Fredoka-Regular.ttf');
+}
 * {
     box-sizing: border-box;
     margin: 0;
-    font-family: Roboto 'Times New Roman';
+    font-family: FredokaReg; /* Roboto 'Times New Roman';*/
     text-decoration: none;
     /* webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
 }
