--- a/src/assets/css/bottomnav.css
+++ b/src/assets/css/bottomnav.css
@@ -10,7 +10,7 @@
     width: 100%;
     position: fixed;
     bottom: 0;
-    z-index: 1;
+    /* z-index: 1; */
     background-color: white;
     box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, .1);
 }
