--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -10,22 +10,21 @@
     /* background-color: grey; */
     height: 100vh;
     width: 100%;
+    position: relative;
 }
-.baseCover {
+.base-cover {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     width: 100%;
     position: fixed;
-    margin: auto 0;
-    /* padding: 2%; */
     top: 3em;
     bottom: 3em;
     overflow-y: scroll;
     /* background-color: rgba(50, 50, 120, .6); */
 }
-.baseCover::-webkit-scrollbar {
+.base-cover::-webkit-scrollbar {
     display: none;
 }
 .page-hold {
@@ -150,12 +149,4 @@
     width: 100%;
     padding: 1%;
     /* background-color: rgba(0,0,0,.2); */
-}
-.back-fill {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,.5);
-    position: absolute;
-    /* z-index: 6; */
 }
