--- a/src/assets/css/explore.css
+++ b/src/assets/css/explore.css
@@ -3,127 +3,24 @@
     margin: 0;
     font-size: 15px;
 }
-.explore {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-}
-.exp-cover {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    position: fixed;
-    /* padding: 1% 2%; */
-    top: 3em;
-    bottom: 3em;
-    overflow-y: scroll;
-}
-.exp-cover::-webkit-scrollbar {
-    display: none;
-}
 .explore-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 96%;
     height: 3em;
-    margin-bottom: .5%;
-    padding: 1%;
-    border-bottom: 1px solid rgba(0,0,0,.05);
-    background-color: white;
-}
-.dummy-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 3em;
-    height: 3em;
-    /* border-radius: 50%; */
-    /* background-color: rgba(255,255,255,1); */
-    /* position: fixed; */
-    /* bottom: 10%; */
-    /* right: 5%; */
-    /* z-index: 2; */
-}
-.gigs-box {
-    display: flex;
-    flex-wrap: wrap;
-    columns: 50% 50%;
-    justify-content: flex-start;
-    align-items: center;
-    width: 99%;
-    margin: 0 auto;
-    /* border: 1px solid black; */
-    position: relative;
-}
-.gigs-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 49%;
-    margin: .5%;
-    height: 8em;
-    position: relative;
+    margin: 2% auto;
     overflow: hidden;
     border-radius: 5px;
-    box-shadow: 0 0 1px 1px rgba(0,0,0,.2);
+    background-color: white;
+    box-shadow: 0 0 1px 1px rgba(0,0,0,.1);
 }
-gigs-img {
-    height: 100%;
-}
-gigs-cover {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    /* height: 10em; */
-    margin: 2em auto;
-    color: white;
-    background-color: rgba(255,255,255,.1);
-    position: absolute;
-    z-index: 2;
-}
-.gigs-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 2em;
-    font-size: 1.3em;
-    margin: 1% auto;
-    /* border: 1px solid black; */
-    text-shadow: 1px 1px rgba(140,217,140,.6);
-}
-.gigs-txt {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.explore-box {
     width: 100%;
-    height: 2em;
-    margin: 2% auto;
-    text-align: center;
-    /* border: 1px solid black; */
-}
-.gigs-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    height: 2.5em;
-    margin: 2% auto;
-    /* font-size: 1.2em; */
-    font-weight: bold;
-    /* border-radius: 5px; */
-    color: white;
-    background-color: rgba(0,128,128,1);
-    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
+    height: 100%;
+    padding: 0 2%;
+    border: none;
+    outline: none;
 }
 .comm-div {
     display: flex;
