--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -12,9 +12,11 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    position: relative;
-    z-index: 1;
-    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 3;
+    height: 100vh;
     width: 100%;
     border: 1px solid black;
 }
@@ -23,16 +25,29 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-    margin-top: 3em;
+    width: 70%;
+    height: 100%;
+    /* margin-top: 3em; */
+    background-color: white;
+    position: fixed;
+    z-index: 2;
+    right: 0;
     /* border: 1px solid black; */
+}
+.nav-tog {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 3.5em;
+    padding: 0 2%;
 }
 .link-item {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    height: 3em;
-    width: 100%;
+    height: 3.5em;
+    width: 70%;
     padding: 0 3%;
     /* color: teal; */
     background-color: white;
