--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -160,26 +160,7 @@
     /* color: white; */
     /* border: 1px solid black; */
 }
-.user-desc {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* height: 4em; */
-    width: 80%;
-    /* border: 1px solid black; */
-    margin: 2% auto;
-    padding: 0 1%;
-}
-.user-bio {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    /* font-size: 12px; */
-    overflow: hidden;
-    /* border: 1px solid black; */
-}
-.user-over-header {
+.user-links {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -189,30 +170,31 @@
     padding: 0 1%;
     font-size: 1.2em;
     /* border-radius: 5px; */
-    border-top: 1px solid rgba(0,0,0,.05);
+    border-bottom: 1px solid rgba(0,0,0,.05);
     background-color: white;
 }
-.user-tabs-cover {
+.u-link-cover {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 3em;
-    margin: 1% auto;
+    height: 100%;
+    margin: 0 auto;
     /* padding: 0 1%; */
+    /* border: 1px solid black; */
 }
-.user-tabs {
+.u-link {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 50%;
-    color: teal;
-    font-size: 1.1em;
+    width: 100%;
+    /* font-size: 1.1em; */
     font-weight: bold;
     /* border: 1px solid black; */
 }
-.user-tabs:target {
+.u-link-active {
+    color: teal;
     border-bottom: 2px solid rgba(0,128,128,1);
 }
