--- a/src/assets/css/statusbar.css
+++ b/src/assets/css/statusbar.css
@@ -15,7 +15,6 @@
     top: 0;
     /* padding: 0 2%; */
     z-index: 1;
-    background-color: white;
     box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, .05);
 }
 .topBar {
@@ -24,9 +23,11 @@
     align-items: center;
     width: 100%;
     height: 3em;
+    padding: 0 2%;
+    background-color: white;
 }
 .topBarLeft {
-    font-size: 1.5em;
+    font-size: 1.4em;
     font-weight: bold;
     color: teal;
 }
@@ -45,8 +46,8 @@
     align-items: center;
     /* border: 1px solid black; */
     border-radius: 50%;
-    width: 2.8em;
-    height: 2.8em;
+    width: 3em;
+    height: 3em;
 }
 .topBarItem:active {
     background-color: rgba(0, 128, 128, .2);
