--- a/src/assets/css/bottomnav.css
+++ b/src/assets/css/bottomnav.css
@@ -11,7 +11,7 @@
     position: fixed;
     bottom: 0;
     /* z-index: 1; */
-    background-color: white;
+    /* background-color: white; */
     box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, .1);
 }
 .tabLinks {
