--- a/src/assets/css/departments.css
+++ b/src/assets/css/departments.css
@@ -8,7 +8,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    /* background-color: grey; */
+    background-color: grey;
 }
 .fad-head {
     display: flex;
