--- a/src/assets/css/faculty.css
+++ b/src/assets/css/faculty.css
@@ -5,7 +5,6 @@
     height: 100%;
     /* position: absolute; */
     z-index: 1;
-    background-color: white;
 }
 .fac-cover {
     display: flex;
@@ -25,7 +24,6 @@
     width: 100%;
     /* padding: 2%; */
     /* font-size: 15px; */
-    background-color: white;
     /* border: 1px solid black; */
     box-shadow: 0 0 .5px .5px rgba(0,0,0,.1);
 }
@@ -60,7 +58,6 @@
     width: 6em;
     height: 6em;
     border-radius: 50%;
-    border: 2px solid rgba(255,255,255,1);
     color: teal;
     background-color: white;
     overflow: hidden;
@@ -68,6 +65,12 @@
     left: 3%;
     bottom: -30%;
     box-shadow: 0 0 1px 1px rgba(0,0,0,.1);
+}
+.fac-avatar-cover-light {
+    border: 2px solid var(--bgLight);
+}
+.fac-avatar-cover-dark {
+    border: 2px solid var(--bgDark);
 }
 .fac-avatar {
     display: flex;
@@ -83,7 +86,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 0 2%;
+    /* padding: 0 2%; */
     margin: 6% 0 0 0;
     /* border: 1px solid black; */
 }
@@ -96,6 +99,7 @@
     /* min-height: 3.5em; */
     width: 100%;
     margin: 0 auto;
+    padding: 0 2%;
     font-weight: bold;
     position: relative;
     /* border: 1px solid black; */
@@ -122,6 +126,7 @@
     align-items: center;
     /* height: 4em; */
     width: 100%;
+    padding: 0 2%;
     /* border: 1px solid black; */
     margin: 1% auto;
 }
@@ -136,30 +141,26 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    /* border: 1px solid black; */
 }
-.fac-cards-actions {
+.fac-act-cover {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    /* border: 1px solid black; */
+    width: 6em;
+    height: 3em;
 }
-.fac-cards-actions::-webkit-scrollbar {
-    display: none;
-}
-.fac-act-btn {
+.fac-btn {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 3em;
-    width: 8em;
+    height: 100%;
+    width: 100%;
+    /* font-size: 1.1em; */
     font-weight: bold;
-    color: teal;
-    /* overflow: hidden; */
     /* border: 1px solid black; */
 }
-.fac-act-btn:active {
-    background-color: rgba(0,128,128,.1);
+.fac-btn-active {
+    color: var(--fontLink);
+    border-bottom: 2px solid var(--fontLink);
 }
