--- a/src/assets/css/gigitem.css
+++ b/src/assets/css/gigitem.css
@@ -9,6 +9,7 @@
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
+    background-color: var(--bgLight);
     position: relative;
 }
 .gig-img {
