--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -34,13 +34,29 @@
     right: 0;
     /* border: 1px solid black; */
 }
+.link-cover-light {
+    background-color: var(--navBgLight);
+}
+.link-cover-dark {
+    background-color: var(--navBgDark);
+}
 .nav-tog {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     width: 100%;
-    height: 3.5em;
-    padding: 0 2%;
+    height: 3em;
+    padding: 0 3%;
+    /* border: 1px solid black; */
+}
+.close-icon {
+    font-size: 25px;
+}
+.close-icon-light {
+    color: var(--fontDark);
+}
+.close-icon-dark {
+    color: var(--fontLight);
 }
 .link-item {
     display: flex;
