--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -33,7 +33,6 @@
     width: 100%;
     /* padding: 2%; */
     /* font-size: 15px; */
-    background-color: white;
 }
 .card-details {
     display: flex;
@@ -76,14 +75,18 @@
     width: 7em;
     height: 7em;
     border-radius: 5px;
-    border: 2px solid rgba(255,255,255,1);
     color: teal;
-    background-color: white;
     overflow: hidden;
     position: absolute;
     /* left: 3%; */
     bottom: -30%;
     box-shadow: 0 0 1px 1px rgba(0,0,0,.1);
+}
+.pro-avatar-cover-light {
+    border: 2px solid var(--bgLight);
+}
+.pro-avatar-cover-dark {
+    border: 2px solid var(--bgDark);
 }
 .pro-avatar {
     display: flex;
@@ -171,7 +174,6 @@
     font-size: 1.2em;
     /* border-radius: 5px; */
     border-bottom: 1px solid rgba(0,0,0,.05);
-    background-color: white;
 }
 .u-link-cover {
     display: flex;
@@ -182,6 +184,12 @@
     margin: 0 auto;
     /* padding: 0 1%; */
     /* border: 1px solid black; */
+}
+.u-link-cover-light {
+    color: var(--fontDark);
+}
+.u-link-cover-dark {
+    color: var(--fontLight);
 }
 .u-link {
     display: flex;
@@ -195,6 +203,6 @@
     /* border: 1px solid black; */
 }
 .u-link-active {
-    color: teal;
+    color: var(--fontLink);
     border-bottom: 2px solid rgba(0,128,128,1);
 }
