--- a/src/assets/css/statusbar.css
+++ b/src/assets/css/statusbar.css
@@ -24,18 +24,29 @@
     width: 100%;
     height: 3em;
     padding: 0 2%;
-    background-color: white;
+    /* background-color: white; */
+}
+.topBarLight {
+    background-color: var(--navBgLight);
+}
+.topBarDark {
+    background-color: var(--navBgDark);
 }
 .topBarLeft {
     font-size: 1.4em;
     font-weight: bold;
-    color: teal;
+}
+.topBarLeftLight {
+    color: var(--fontDark);
+}
+.topBarLeftDark {
+    color: var(--fontLight);
 }
 .topBarRight {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 30%;
+    /* width: 30%; */
     height: 100%;
     /* border: 1px solid black; */
 }
@@ -44,16 +55,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* border: 1px solid black; */
     border-radius: 50%;
-    width: 3em;
-    height: 3em;
+    width: 2.5em;
+    height: 2.5em;
+    /* border: 1px solid black; */
 }
 .topBarItem:active {
     background-color: rgba(0, 128, 128, .2);
 }
 .chatLink {}
 .menuLink {}
-.topBarIcons {
-    color: rgb(0,128,128);
+.topBarIcon {
+    font-size: 25px;
+}
+.topBarIconLink {
+    color: var(--fontLink);
+}
+.topBarIconDark {
+    color: var(--fontLight);
 }
