--- a/src/assets/css/userchannel.css
+++ b/src/assets/css/userchannel.css
@@ -1,8 +1,8 @@
-.manager {
+.us-ch-hold {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100%;
+    padding: 2% 0;
 }
