--- a/src/assets/css/Signin.css
+++ b/src/assets/css/Signin.css
@@ -1,24 +1,23 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: Courier New;
-}
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
 }
 .signin-cover {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: auto;
-    width: 90%;
+    /* margin-top: auto; */
+    width: 100%;
     padding: 5% 0;
+    border-radius: 10px 10px 0 0;
+    position: fixed;
+    bottom: 0;
     background-color: white;
 }
 .logintxt {
