--- a/src/assets/css/explore.css
+++ b/src/assets/css/explore.css
@@ -1,7 +1,53 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    font-size: 15px;
+.explore-box {
+    width: 100%;
+    height: 100%;
+    padding: 0 2%;
+    border: none;
+    outline: none;
+}
+.exp-head {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* height: 10em; */
+    margin-bottom: 4%;
+    /* padding: 1%; */
+    text-align: center;
+    /* border: 1px solid white; */
+    /* background-color: var(--navBgDark); */
+}
+.exp-head-light {
+    /* background-color: var(--fontLink); */
+}
+.exp-head-dark {
+    background-color: var(--navBgDark);
+}
+.exp-icon-cover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10em;
+    /* border: 1px solid white; */
+}
+.exp-head-txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 3em;
+    flex-wrap: wrap;
+    margin: 1% auto;
+    font-size: 1.2em;
+    /* border: 1px solid white; */
+}
+.exp-head-txt-light {
+    color: var(--fontDark);
+}
+.exp-head-txt-dark {
+    color: var(--fontLight);
 }
 .explore-bar {
     display: flex;
@@ -15,198 +61,83 @@
     background-color: white;
     box-shadow: 0 0 1px 1px rgba(0,0,0,.1);
 }
-.explore-box {
+.exp-links {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    padding: 0 2%;
-    border: none;
-    outline: none;
-}
-.comm-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 98%;
-    margin: .5% auto;
+    min-height: 4em;
     padding: 1%;
-    /* border: .8px solid rgba(0,0,0,.1); */
-    /* border-radius: 5px; */
-    background-color: white;
-    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
-    position: relative;
+    /* font-weight: bold; */
+    /* border: .1px solid black; */
 }
-.head-txt {
+.exp-links-light {
+    box-shadow: 0 0 .5px .5px rgba(0,0,0,.1);
+    color: var(--fontDark);
+}
+.exp-links-light:active {
+    background-color: rgba(0,0,0,.1);
+}
+.exp-links-dark {
+    box-shadow: 0 0 .5px .5px rgba(255,255,255,.1);
+    color: var(--fontLight);
+}
+.exp-links-dark:active {
+    background-color: rgba(0,0,0,.5);
+}
+.exp-link-img-cover {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 98%;
-    height: 1.8em;
-    margin: 1% auto;
-    /* padding: 0 1%; */
-    font-size: 1.2em;
-    /* border: .5px solid rgba(0,0,0,.1); */
-    border-radius: 5px;
-    /* box-shadow: 0 0 .5px .5px rgba(0,0,0,.1); */
-}
-.comm-grp {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 99%;
-    padding: 1% 0;
-    overflow-x: scroll;
-    /* border: 1px solid black; */
-    position: relative;
-}
-.comm-grp::-webkit-scrollbar {
-    display: none;
-}
-.comm-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    /* min-height: 3em; */
-    /* max-height: 14em; */
-    min-width: 16em;
-    max-width: 20em;
-    margin: 0 0.5%;
-    padding: 1%;
-    /* border: 1px solid rgba(0, 0, 0, .1); */
-    border-radius: 3px;
-    box-shadow: 0 0 1px .5px rgba(0,0,0,.1);
-    position: relative;
-}
-.comm-item-cover {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 10em;
-    /* border: 1px solid rgba(0,0,0,.1); */
-    border-radius: 3px;
+    width: 2.5em;
+    height: 2.5em;
+    margin: 1%;
+    border-radius: 50%;
     overflow: hidden;
+    /* border: 1px solid white; */
 }
-.comm-item-img {
-    height: 100%;
+.exp-link-img {
+    /* height: 100%; */
+    color: var(--fontLink);
 }
-.comm-item-content {
-    display: flex;
-    justify-content: center;
+.exp-link-txt-cover {
+    display: grid;
+    grid-row: 2;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
     width: 80%;
+    margin: auto 1%;
+    /* height: 100%; */
+    /* border: 1px solid black; */
 }
-.comm-item-txt {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50%;
-    margin: 1em auto;
-    background-color: white;
-}
-.comm-item-txt>h3 {
+.exp-link-txt-hd {
     font-size: 1.2em;
-}
-.search-page {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: white;
-    z-index: 4;
-}
-.search-bar {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 3em;
-    width: 100%;
-    padding: 1%;
-    background-color: white;
-    border-bottom: 1px solid rgba(0,0,0,.05);
-}
-.close-bar {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 3em;
-    height: 100%;
     /* border: 1px solid black; */
 }
-.input-area {
+.exp-link-txt {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    height: 100%;
+    flex-wrap: wrap;
+    color: grey;
+    font-size: .8em;
+    /* justify-self: left; */
+    /* text-align: left; */
     /* border: 1px solid black; */
 }
-.search-box {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100%;
-    width: 80%;
-    padding: 4%;
-    outline: none;
-    border: none;
-    font-size: 15px;
-    /* border-radius: 20px 0px 0px 20px; */
-    background-color: rgba(0, 0, 0, .05);
-}
-.search-btn {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 4em;
-    /* border-radius: 0 20px 20px 0; */
-    background-color: rgba(0, 0, 0, .05);
-}
-.quick-results {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    /* border: 1px solid black; */
-}
-.quick-results > h3, .search-history > h3 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    /* border: 1px solid black; */
-}
-.quick-result-items {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 3em;
-    /* border: 1px solid black; */
-}
-.search-history {
+.exp-top {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
-.history-item {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 3em;
-    /* border: 1px solid black; */
+.exp-top-light {
+    color: var(--fontDark);
+    /* background-color: var(--bgDark); */
 }
+.exp-top-dark {
+    color: var(--fontLight);
+}
+.exp-top-head {}
+.exp-top-light {}
+.exp-top-dark {}
