--- a/src/assets/css/faculty.css
+++ b/src/assets/css/faculty.css
@@ -1,21 +1,3 @@
-.fac-hold {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    height: 100%;
-    /* position: absolute; */
-    z-index: 1;
-}
-.fac-cover {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    /* padding: 1% 2%; */
-    /* overflow-y: scroll; */
-}
 .fac-card {
     display: flex;
     flex-direction: column;
@@ -24,7 +6,7 @@
     width: 100%;
     /* padding: 2%; */
     /* font-size: 15px; */
-    /* border: 1px solid black; */
+    /* border: 1px solid white; */
     box-shadow: 0 0 .5px .5px rgba(0,0,0,.1);
 }
 .fac-card-details {
@@ -34,7 +16,7 @@
     align-items: center;
     /* height: 4em; */
     width: 100%;
-    /* border: 1px solid black; */
+    /* border: 1px solid white; */
     position: relative;
 }
 .fac-cover-frame {
@@ -51,35 +33,6 @@
     width: 100%;
     /* height: 100%; */
 }
-.fac-avatar-cover {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 6em;
-    height: 6em;
-    border-radius: 50%;
-    color: teal;
-    background-color: white;
-    overflow: hidden;
-    position: absolute;
-    left: 3%;
-    bottom: -30%;
-    box-shadow: 0 0 1px 1px rgba(0,0,0,.1);
-}
-.fac-avatar-cover-light {
-    border: 2px solid var(--bgLight);
-}
-.fac-avatar-cover-dark {
-    border: 2px solid var(--bgDark);
-}
-.fac-avatar {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /* width: 100%; */
-    height: 100%;
-}
 .fac-titles {
     display: flex;
     flex-direction: column;
@@ -87,8 +40,8 @@
     align-items: center;
     width: 100%;
     /* padding: 0 2%; */
-    margin: 6% 0 0 0;
-    /* border: 1px solid black; */
+    /* margin: 1% 0; */
+    /* border: 1px solid white; */
 }
 .fac-name-cover {
     display: flex;
@@ -109,9 +62,9 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    font-size: 1.2em;
-    /* margin: 1% 0; */
-    /* border: 1px solid black; */
+    font-size: 1.3em;
+    margin: 2% 0;
+    /* border: 1px solid white; */
 }
 .fac-name-sub {
     width: 100%;
@@ -141,6 +94,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    margin: 2% 0;
 }
 .fac-act-cover {
     display: flex;
