--- a/src/assets/css/fahome.css
+++ b/src/assets/css/fahome.css
@@ -5,6 +5,6 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     /* background-color: white; */
 }
