--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,30 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-.home {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-}
-.homeCover {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    position: fixed;
-    margin: auto 0;
-    top: 3em;
-    bottom: 3em;
-    overflow-y: scroll;
-}
-.homeCover::-webkit-scrollbar {
-    display: none;
-}
 .pop-serve {
     display: flex;
     flex-direction: column;
@@ -32,6 +5,7 @@
     align-items: center;
     width: 98%;
     margin: 3% 0;
+    /* font-family: var(--fontFam); */
 }
 .ft-div {
     display: flex;
@@ -42,18 +16,19 @@
     margin: 0 auto;
     /* border: 1px solid black; */
 }
+.ft-div-light {
+    color: var(--fontDark);
+}
+.ft-div-dark {
+    color: var(--fontLight);
+}
 .ft-txt {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     width: 50%;
     font-size: 1.2em;
-}
-.ft-txt-light {
-    color: var(--fontDark);
-}
-.ft-txt-dark {
-    color: var(--fontLight);
+    /* font-family: FredokaReg; */
 }
 .ft-more {
     display: flex;
@@ -64,8 +39,7 @@
     padding: 0 2px;
     font-size: .8em;
     font-weight: bold;
-    color: teal;
-    border: 1px solid rgba(0,128,128,.1);
+    /* border: 1px solid rgba(0,128,128,.1); */
     border-radius: 5px;
     box-shadow: 0 0 -2px .5px rgba(0,0,0,.1);
     /* background-color: var(--bgLight); */
@@ -76,7 +50,6 @@
     border: none;
 }
 .ft-more:visited {
-    color: teal;
 }
 .pop-cover {
     display: flex;
@@ -93,20 +66,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 10em;
-    height: 12em;
+    min-width: 14em;
+    height: 14em;
     margin: 2% 1.5%;
     border-radius: 5px;
     overflow: hidden;
 }
 .pop-item-light {
     color: var(--fontDark);
+    background-color: var(--navBgLight);
     box-shadow: 0 0 5px 1px rgba(0,0,0,.2);
 }
 .pop-item-dark {
-    border: 1px solid white;
+    border: 1px solid rgba(255,255,255,.5);
     color: var(--fontLight);
-    background-color: var(--bgLight);
+    background-color: var(--navBgDark);
 }
 .pop-img {
     /* width: 100%; */
@@ -120,6 +94,14 @@
     height: 30%;
     padding: 0 4%;
     font-weight: bold;
+}
+.pop-txt-light {
+    color: var(--fontDark);
+    background-color: var(--navBgLight);
+}
+.pop-txt-dark {
+    color: var(--fontLight);
+    background-color: var(--navBgDark);
 }
 .gigs-cover {
     display: flex;
