--- a/src/assets/css/notif.css
+++ b/src/assets/css/notif.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
 .notifs {
     display: flex;
     flex-direction: column;
@@ -26,13 +22,19 @@
     overflow-y: scroll;
     /* background-color: rgba(50, 50, 120, .6); */
 }
-.headArea {
+.head-area {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 3em;
-    background-color: white;
+    /* background-color: white; */
+}
+.head-area-light {
+    color: var(--fontDark);
+}
+.head-area-dark {
+    color: var(--fontLight);
 }
 .sectionHead {
     display: flex;
@@ -43,6 +45,16 @@
     height: 100%;
     /* border-bottom: 1px solid rgba(0,0,0, .05); */
 }
+.tab-txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.tab-txt-active {
+    border-bottom: 2px solid var(--fontLink);
+}
 .activitySectionHead {}
 .bookmarkSectionHead {}
 .sections {
@@ -52,7 +64,7 @@
     align-items: center;
     width: 100%;
     padding: 0 2%;
-    background-color: white;
+    /* background-color: white; */
 }
 .activitySection {}
 .bookmarkSection {}
