--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -1,30 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: Courier New;
-}
-.profile {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    /* height: 100%; */
-    width: 100%;
-    position: fixed;
-    top: 3em;
-    /* bottom: 3em; */
-    /* background-color: grey; */
-}
-.profile-cover {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    /* padding: 1% 2%; */
-    overflow-y: scroll;
-    position: relative;
-}
 .info-card {
     display: flex;
     flex-direction: column;
@@ -33,6 +6,12 @@
     width: 100%;
     /* padding: 2%; */
     /* font-size: 15px; */
+}
+.info-card-light {
+    /* background-color: var(--navBgDark); */
+}
+.info-card-dark {
+    background-color: var(--navBgDark);
 }
 .card-details {
     display: flex;
@@ -72,9 +51,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 7em;
-    height: 7em;
-    border-radius: 5px;
+    width: 6em;
+    height: 6em;
+    border-radius: 50%;
     color: teal;
     overflow: hidden;
     position: absolute;
@@ -183,7 +162,7 @@
     height: 100%;
     margin: 0 auto;
     /* padding: 0 1%; */
-    /* border: 1px solid black; */
+    /* border: 1px solid green; */
 }
 .u-link-cover-light {
     color: var(--fontDark);
